Rewrite usage with extended charset and hide instructions when need not be.

--- a/popup.html
+++ b/popup.html
@@ -6,13 +6,14 @@
 	  body {
 	  overflow: scroll;
 	  height: 60px;
-	  width: 200px;
+	  width: 300px;
 	  outline: none;
 	  margin: 5px;
 	  }
 
 	  .baslik-butonu {
 	  margin: 5px;
+	  margin-bottom: 10px;
 	  }
 
 	  #le-aciklama {
@@ -21,13 +22,23 @@
 
 	  #yok {
 	  margin: 5px;
+	  margin-bottom: 10px;
+	  }
+
+	  #leBaslikDiv: {
+	  display: flex;
+	  flex-direction: column;
+	  margin-bottom: 10px;
 	  }
 	</style>
   </head>
   <body>
+	<div style="margin-bottom:5px;margin-left:5px">
+	  <h2>ek$iten$in</h2>
+	</div>
 	<div id="le-aciklama">
-	  <h4>an itibariyle engelli başlıklar.</h4>
-	  <p>ikinci bir şans vermek istiyorsak, başlığın üstüne tıklayıp onu azat edip sayfayı yenileriz.. neden olmasın?</p>
+	  <h4>an itibariyle engelli başlıklar..</h4>
+	  <p>ikinci bir şans vermek istiyorsak, alakalı butona tıklayıp onu azat edip sayfayı yenileriz.. neden olmasın?</p>
 	</div>
 	<div>
 	  <p id="yok">engelli başlık yok gibi bu dutlukta.</p>
